# VeloCollab

./: .gitignore  .pre-commit-config.yaml  DEV_SERVICES.md  README.md  TODO.md  dev-services.sh  dev-test.sh  development_specs.md  pyproject.toml  requirements.md
.github/workflows/: ci.yml
.warp/: PAGER_FIX.md  README.md  launch_configurations.yaml  workflows.yaml
.warp/scripts/: clean-all.sh  project-info.sh  setup-dev.sh  setup-warp-env.sh  setup-warp-only-env.sh  start-full-stack.sh  test-all.sh
.warp/themes/: velocollab.yaml
backend/: .env.example  README.md  requirements.txt
backend/src/app/: __init__.py  config.py  main.py  mock_data.py  routes.py  schemas.py
backend/tests/: __init__.py  test_main.py
branding/: available_domains.txt  branding.md  new_proposed_domains.txt  proposed_domains.txt  taken_domains.txt
doc/: phase1.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: ErrorMessage.tsx  LoadingSpinner.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Exercises.tsx  Home.tsx  Login.tsx  Workouts.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
